fixed dots shwoing after wrap on ul and li tags

--- a/index.css
+++ b/index.css
@@ -29,16 +29,25 @@ html {
 }
 
 .col-sm-12 ul li {
-  list-style: none;
   display: inline;
   font-size: 18px;
   text-align: center;
+  white-space: nowrap;;
 }
 
-.col-sm-12 ul li:last-child:after {
+.skills ul li:last-child::after {
   content: none;
 }
 
+.skills ul li.nobullet::after {
+  content: none;
+}
+
+.skills ul li:after {
+  content: "\2022";
+  font-size: 20px;
+  padding: 10px;
+}
 #email {
   height: 32px;
   width: 42px;
@@ -57,11 +66,6 @@ html {
 }
 
 
-.skills ul li:after {
-  content: "\2022";
-  font-size: 20px;
-  padding: 10px;
-}
 
 
 /* NAVBAR */
